test/fail/parse_record_def_missing_comma.ms
record Point {
  x: Int32
  y: Int32
};
